[fix] duniter/duniter#1013 Cannot scroll during sync on small screens

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -368,3 +368,8 @@ blockquote.info
   .input-field
 
     margin-top 0
+
+.syncMain {
+
+  overflow: auto
+}
